Review Request 0000 - PLS-10622 I believe it will now use the correct xhr path when sending Segment ID, but testing is hard for this... - fixed situation where the header user menu was so long that is caused horizontal scrollbar to appear

--- a/le-ui/projects/common/assets/sass/_navigation.scss
+++ b/le-ui/projects/common/assets/sass/_navigation.scss
@@ -808,6 +808,7 @@ html:not(.no-cssmask) .secondary-nav ul.secondary-nav-grid > li .jobs-nav-gear s
                 font-size: 14px;
                 text-overflow: ellipsis;
                 overflow: hidden;
+                max-width: 150px;
                 //margin-top: .4em;
             }
             .tenant-name {
